19
- Add Rockchip

18
- Rework default.py

17
- Add btfs and Lidarr

16
- Add FlexGet

15
- Add NZBHydra

14
- Support repository.rbrepo

13
- Add aria2

12
- Support S805

11
- Mention Medusa, remove SickRage

10
- Support Slice and Slice3
- Update repositories on LibreELEC update

9
- Mention rTorrent and ruTorrent

8
- Rework default.py

7
- Rework default.py

6
- Mention qBittorrent

5
- Rename add-on

4
- Mention Radarr

3
- Mention Deluge

2
- Fix datadir

1
- Initial add-on